2009-11-24  Stefan Monnier  <monnier@iro.umontreal.ca>

	* insdel.c (adjust_markers_for_delete): Move it in the
	right direction!  (bug#4803)

2009-11-24  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* font.c (font_open_entity): Don't use ASET if font_object is Qnil.

	* xterm.c (x_new_font): Update f->scroll_bar_actual_width.

2009-11-24  Glenn Morris  <rgm@gnu.org>

	* frame.c (focus-follows-mouse): Mention mouse-autoselect-window.

2009-11-23  Jan Djärv  <jan.h.d@swipnet.se>

	* Makefile.in: Must create deps for ecrt0.o in its rule.

	* xfns.c (Fx_select_font): Try to convert Fontconfig name to Gtk name
	because that is what Gtk+ font dialog understands.

	* font.c (font_make_object, Fcopy_font_spec): Use Fcopy_alist instead
	of Fcopy_sequence.
	(font_open_by_name): Put name given into QCname for font-object returned.

	* frame.c (x_set_font): Save original font name as frame parameter
	font-parameter.

	* xsettings.c (set_default_xft_settings): New function.
	(init_xfd_settings): Call set_default_xft_settings if no XSETTINGS window
	is found.

2009-11-22  Andreas Schwab  <schwab@linux-m68k.org>

	* search.c (simple_search): Avoid CHAR_TO_BYTE in inner loop when
	searching backwards through multibyte buffer.

2009-11-21  Jan Djärv  <jan.h.d@swipnet.se>

	* xterm.c: #include xgselect.h.
	(x_initialize): Call xgselect_initialize.

	* xsettings.c (something_changedCB): C++ comments => C comments.
	(init_gconf): Do not deal with any GLib file descriptors, xg_select
	does that now.

	* gtkutil.c (xg_timer, xg_process_timeouts, xg_start_timer)
	(xg_stop_timer, menu_grab_callback_cnt, menu_grab_callback)
	(scroll_bar_button_cb): Remove.
	(create_menus): C++ comments => C comments. Don't bind grab-notify
	event.
	(xg_create_scroll_bar): Don't bind button-press-event and
	button-release-event.

	* process.c: Include xgselect.h if defined (USE_GTK) ||
	defined (HAVE_GCONF).
	(wait_reading_process_output): Call xg_select for the same condition.
