@@ -1,3 +1,8 @@
+2009-11-25  Jan Djärv  <jan.h.d@swipnet.se>
+
+	* xsettings.c: Revert changes from 2009-11-23. Just use Xft
+	defaults (bug #5025).
+
 2009-11-24  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* insdel.c (adjust_markers_for_delete): Move it in the
